<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ap_selecciona"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/selecciona_actividad"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:text="@string/figuras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ap_btFiguras" />

    <Button
        android:text="@string/dibujos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ap_btDibujos" />

    <Button
        android:text="@string/mates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ap_btMates" />

    <TextView
        android:text="@string/estadisticas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ap_estadistics"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="115dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/triangulo"
            android:id="@+id/imageView"
            android:layout_weight="0.33" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/casa"
            android:id="@+id/imageView2"
            android:layout_weight="0.33" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_input_add"
            android:id="@+id/imageView3"
            android:layout_weight="0.33" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:gravity="center">

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ap_punt1"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center"
            android:textStyle="normal|bold|italic"
            android:textSize="20sp" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ap_punt2"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center"
            android:textStyle="normal|bold|italic"
            android:textSize="20sp"/>

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ap_punt3"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center"
            android:textStyle="normal|bold|italic"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:text="@string/salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/salir" />

</LinearLayout>